<resources>
    <string name="app_name">Prabandhah</string>
    <string name="welcome_to_prabandhah">Welcome to Prabandhah!</string>

    <string name="sign_up"><u>Sign up!</u></string>
    <string name="password">Password</string>
    <string name="are_you_new_user">Are you new user</string>
    <string name="forget_password">Forget password</string>
    <string name="next">Next</string>
    <string name="str_username">User name</string>
    <string name="str_password">Password</string>
    <string name="login">Login</string>
    <string name="new_user">New user? </string>
    <string name="i_am">I am Employee</string>
    <string name="owner">I am Owner</string>
    <string name="Create_company_profile">Create Company Profile</string>
    <string name="join_Company">Join Company</string>
    <string name="Crete_or_join">Create or Join your Compnay!</string>
    <string name="verify_mail">Verify Your Email id!</string>
    <string name="enter_code">Enter code</string>
    <string name="resend">Resend Code!</string>
    <string name="enter_code_sent_to_your_mail">enter code sent to your mail</string>
    <string name="ask_admin">Ask your Admin for Rafael Code</string>
    <string name="EnterPass">Enter New Password</string>
    <string name="EnterMail">Enter mail id</string>
    <string name="done">Done</string>
    <string name="title_activity_choose_road">ChooseRoad</string>
    <string name="Check_mail">Verify your Mail id Then press continue!</string>
    <string name="continue_1">Continue</string>
    <string name="name_of_cmp">Name of Company</string>
    <string name="Address">Address</string>
    <string name="title_activity_temp">temp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="create_or_join_your_company">Create or Join Your Company!</string>
    <string name="i_am_employee_join_your_company">I am Employee. Join your Company</string>
    <string name="i_am_owner_create_company_profile">I am owner. Create Company Profile.</string>
    <string name="no_new_notification">no new notification</string>
    <string name="emlpoyee_list">Employee List</string>
    <string name="Event_list">Event List</string>
    <string name="Team_list">Team List</string>
    <string name="Task_list">Task List</string>
    <string name="Setting">Settings</string>
    <string name="Logout">Log out!</string>
    <string name="profile">profile</string>
    <string name="employee_list">employee list</string>
    <string name="task_list">task list</string>
    <string name="title_activity_ui__setting">UI_Setting</string>
    <string name="create_team">Create team</string>
    <string name="create_event">create event</string>
    <string name="accout_setting">Account Settings</string>
    <string name="chat">Chat</string>
    <string name="notification_setting">Notification Settings</string>
    <string name="report_bug">Report Bug</string>
    <string name="help">Help</string>
    <string name="create_event_title">Create a new event</string>
    <string name="name_of_event">Name of event</string>
    <string name="select_datetime">Select Date Time of Event</string>
    <string name="select_start_date">Start</string>
    <string name="select_start_dateandtime">Select Start Date and Time</string>
    <string name="select_end_date">End</string>
    <string name="no_of_guest">No of guest</string>
    <string name="buget">Budget</string>
    <string name="desription_of_event">Descrition of event</string>
    <string name="title_activity_add_event_manager_in_event">addEventManagerInEvent</string>
    <string name="select_event_manger">Select EventManger</string>
    <string name="company_profile">Company Profile</string>
    <string name="company_name">Company Name</string>
    <string name="email">Email</string>
    <string name="owner_name">Owner Name</string>
    <string name="notification">Notification</string>
    <string name="about_us">About Us!</string>
    <string name="save">save</string>
    <string name="name_of_team">name of team</string>
    <string name="add_new_event_manager">Add New Event Manager</string>
    <string name="add_new_admin">Add New Admin</string>
    <string name="add_new_employee_in_team">Add new Employee in Team</string>
    <string name="type_of_event">type Of event</string>
    <string name="detail_of_event">Detail of Event</string>
    <string name="edit_event_detail">Edit Event Detail</string>
    <string name="Testing">Testing</string>
    <string name="included_teams">Included Teams</string>
    <string name="add_new_team">Add new Team</string>
    <string name="assign_task">Assign Task</string>
    <string name="verification_mail_has_been_sent_on_your_mail_id">Verification mail has been sent on your mail id!</string>
    <string name="company_email">Company Email</string>
    <string name="company_name1">Company Name</string>
    <string name="post">Post</string>
    <string name="sign_up1">Sign Up!</string>
    <string name="admin_list">Admins of Team(includes event mangers)</string>
    <string name="team_name">Team Name</string>
    <string name="About_us">Our project name is Event Workload Distribution and Tracking for Manager.\nOur main motto is to distributing task. \nThis is the online application which serves the functionality of Event Manager.\n You can create multiple events, teams, tasks, etc</string>
    <string name="description_of_event">Description of event</string>
    <string name="enter_event_type">Enter Event type</string>
    <string name="team_headname">Teamhead Name:</string>
    <string name="employee_list_select_teamhead">Employee(select teamhead)</string>
    <string name="date">Date:</string>
    <string name="end_date">End Date:</string>
    <string name="start_date">Start Date:</string>
    <string name="event_manager">Event Manager:</string>
    <string name="event_manager_name">Event Manager Name</string>
    <string name="time">Time:</string>
    <string name="time1">Time:</string>
    <string name="datetime">Date and Time</string>
    <string name="completed">Completed</string>
    <string name="add_teams_to_event">Add teams to event</string>
    <string name="task_for_team">Task for Team</string>
    <string name="task">Task:</string>
    <string name="status1">Status:</string>
    <string name="no_of_task">No of Task</string>
    <string name="event_task_list">Event Task list</string>
    <string name="assigned_task">Assigned Task</string>
    <string name="completed_task">Completed Task</string>
    <string name="no_of_sub_task">No of sub Task:</string>
    <string name="name_of_team1">Name of Team</string>
    <string name="task_for_teamhead">Task for Teamhead</string>
    <string name="name_of_team2">Name of Team:</string>
    <string name="task_for_teamhead1">Task for Teamhead:</string>
    <string name="sub_task_for_team_members">Sub Task for Team members</string>
    <string name="create_sub_task">Create Sub-Task</string>
    <string name="select_teammembers">Select Teammembers</string>
    <string name="no_of_employees">No of employees:</string>
    <string name="assigned">assigned</string>
    <string name="detail_of_subtask">Detail of Subtask</string>
    <string name="employee_name">Employee name:</string>
    <string name="team_name2">Team Name:</string>
    <string name="no_of_task_partner">No of Task Partner:</string>
    <string name="partners">Partners</string>
    <string name="name_of_partner">Name of Partner:</string>
    <string name="pos">pos</string>
    <string name="task_partner_list">Task Partner List</string>
    <string-array name="forrecylevieweventstatus">
        <item>"Assigned"</item>
        <item>"Completed"</item>
    </string-array>

</resources>
