<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <group android:id="@+id/admin_optn">
        <item
            android:id="@+id/adm_profile"
            android:orderInCategory="100"
            android:title="Profile"
            app:showAsAction="never" />
        <item
            android:id="@+id/adm_empList"
            android:orderInCategory="100"
            android:title="@string/emlpoyee_list"
            app:showAsAction="never" />
        <item
            android:id="@+id/adm_eventList"
            android:icon="@drawable/ic_keyboard_arrow_down_black_24dp"
            android:orderInCategory="100"
            android:title="@string/Event_list"
            app:showAsAction="never" />
        <item
            android:id="@+id/adm_teamList"
            android:orderInCategory="100"
            android:title="@string/Team_list"
            app:showAsAction="never" />
        <item
            android:id="@+id/adm_taskList"
            android:orderInCategory="100"
            android:title="@string/Task_list"
            app:showAsAction="never" />
        <item
            android:id="@+id/adm_setting"
            android:orderInCategory="100"
            android:title="@string/Setting"
            app:showAsAction="never"
            />
        <item
            android:id="@+id/adm_Logout"
            android:orderInCategory="100"
            android:title="@string/Logout"
            app:showAsAction="never"
            />

    </group>

</menu>

