<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.prabandhah.prabandhah.LoginPage"
    android:orientation="vertical"
    android:background="@drawable/login_img">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_20sdp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_gravity="center"
            android:src="@drawable/logo"
            android:layout_marginTop="@dimen/_20sdp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_prabandhah"
            android:gravity="center"
            android:textSize="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="#fff"/>
        <!--email-->  <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_12sdp"
        app:cardElevation="@dimen/_10sdp"
        app:cardBackgroundColor="#a4a4a4"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            app:hintTextAppearance="@style/HintText">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>
    </android.support.v7.widget.CardView>




        <!--password-->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            app:cardCornerRadius="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_12sdp"
            app:cardElevation="@dimen/_10sdp"
            app:cardBackgroundColor="#a4a4a4"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                app:passwordToggleEnabled="true"
                app:hintTextAppearance="@style/HintText">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>
        </android.support.v7.widget.CardView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_user"
                android:textSize="@dimen/_11sdp"
                android:textColor="#fff"/>
            <TextView
                android:id="@+id/signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_3sdp"
                android:text="@string/sign_up"
                android:textColor="#46FBFC"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/forget_pass_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:gravity="right"
                android:text="@string/forget_password"
                android:textColor="#fff" />
        </LinearLayout>

        <!--login-->
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rac_btn"
            android:text="@string/login"
            android:layout_marginTop="@dimen/_20sdp"
            />



    </LinearLayout>

</LinearLayout>
