<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.prabandhah.prabandhah.ForgetPassNewPassword"
    android:background="@drawable/login_img">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_120sdp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/EnterMail"
            android:textColor="#fff"
            android:textSize="@dimen/_15sdp"
            />
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            app:cardCornerRadius="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_12sdp"
            app:cardElevation="@dimen/_10sdp"
            app:cardBackgroundColor="#a4a4a4"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                app:passwordToggleEnabled="true"
                app:hintTextAppearance="@style/HintText">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email_forget_passPage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/btn_forget_passpage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rac_btn"
            android:text="@string/done"
            android:layout_marginTop="@dimen/_80sdp"
            />


    </LinearLayout>
</LinearLayout>
