<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Ui_createsubtaskforteammembers">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/appbarcolor"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/custPopupstyle">
        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_30sdp"
            android:id="@+id/createEvent_png_backbtn"
            android:src="@drawable/ic_arrow_back_black_24dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_sub_task"
            android:textSize="@dimen/_15sdp"
            android:textColor="#fff"
            android:layout_marginLeft="@dimen/_26sdp"/>
    </android.support.v7.widget.Toolbar>
    <EditText
        android:id="@+id/task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:hint="@string/task"/>
    <View
        android:layout_marginTop="@dimen/_3sdp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <TextView
        android:layout_margin="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/lablegreen"
        android:text="@string/select_teammembers"/>
    <android.support.v7.widget.RecyclerView
        android:layout_margin="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recycler"/>
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="@dimen/_10sdp"
            android:src="@drawable/ic_add_black_24dp"
            app:backgroundTint="@color/floatplusbtn"
            app:fabSize="normal"/>

    </android.support.design.widget.CoordinatorLayout>
</LinearLayout>